--- a/src/p2-homeworks/h3/Greeting.module.css
+++ b/src/p2-homeworks/h3/Greeting.module.css
@@ -9,7 +9,7 @@
     flex-direction: column;
     gap: 10px;
     column-gap: 10px;
-    padding: 30px 20px;
+    padding: 40px 20px;
     border-radius: 20px;
     background-color: #2b3f64;
     width: 300px;
@@ -41,7 +41,8 @@ input {
     position: absolute;
     color: #cb5757;
     font-size: 12px;
-    top: 12px;
+    bottom: 5px;
+    max-width: 200px;
 }
 
 input:hover{
