--- a/src/p2-homeworks/h3/Greeting.module.css
+++ b/src/p2-homeworks/h3/Greeting.module.css
@@ -41,7 +41,7 @@ input {
     position: absolute;
     color: #cb5757;
     font-size: 12px;
-    bottom: 5px;
+    margin-top: 35px;
     max-width: 200px;
 }
 
