--- a/src/p2-homeworks/h4/HW4.module.css
+++ b/src/p2-homeworks/h4/HW4.module.css
@@ -6,6 +6,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 20px;
+}
+
+.row {
+    display: flex;
+    align-items: center;
+    gap: 15px;
 }
 
 .testSpanError {
