--- a/src/p1-main/m1-ui/u1-app/App.module.css
+++ b/src/p1-main/m1-ui/u1-app/App.module.css
@@ -1,3 +1,15 @@
 .App {
-
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    background-color: #49516e;
+    color: #fff;
+    gap: 30px;
+    padding-bottom: 50px;
 }
+
+h1{
+    text-align: center;
+}
+
