--- a/src/p2-homeworks/h4/HW4.module.css
+++ b/src/p2-homeworks/h4/HW4.module.css
@@ -2,11 +2,14 @@
     border-bottom: 5px solid blue;
 }
 
-.column {
+.wrapper {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 20px;
+    border-radius: 20px;
+    background-color: #223452;
+    padding: 40px 30px 20px 30px;
 }
 
 .row {
