- mini refactor hw4

--- a/src/p2-homeworks/h4/HW4.module.css
+++ b/src/p2-homeworks/h4/HW4.module.css
@@ -21,3 +21,12 @@
 .testSpanError {
     color: blue;
 }
+
+label{
+    display: flex;
+    align-items: center;
+}
+
+span{
+    line-height: 10px;
+}
