--- a/src/p2-homeworks/h4/HW4.module.css
+++ b/src/p2-homeworks/h4/HW4.module.css
@@ -18,6 +18,13 @@
     gap: 15px;
 }
 
+.column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+}
+
 .testSpanError {
     color: blue;
 }
