--- a/src/p1-main/m1-ui/u1-app/App.module.css
+++ b/src/p1-main/m1-ui/u1-app/App.module.css
@@ -6,9 +6,11 @@
     color: #fff;
     gap: 30px;
     padding-bottom: 50px;
+    transition: 2s;
+    min-height: 100vh;
 }
 
-h1{
+h1 {
     text-align: center;
 }
 
